--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "cron/crlib",
+    "name": "cron/neos-crlib",
     "type": "typo3-flow-package",
     "description": "TYPO3CR Utilities",
     "require": {
