--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,13 @@
 {
-    "name": "cron/neos-crlib",
-    "type": "typo3-flow-package",
-    "description": "TYPO3CR Utilities",
-    "require": {
-        "typo3/flow": "*"
-    },
-    "autoload": {
-        "psr-0": {
-            "CRON\\CRLib": "Classes"
-        }
-    }
+	"name": "cron/neos-crlib",
+	"type": "typo3-flow-package",
+	"description": "TYPO3CR Utilities",
+	"require": {
+		"typo3/neos": "~2.0"
+	},
+	"autoload": {
+		"psr-0": {
+			"CRON\\CRLib": "Classes"
+		}
+	}
 }
