--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
 	"type": "typo3-flow-package",
 	"description": "TYPO3CR Utilities",
 	"require": {
-		"typo3/neos": "*"
+		"typo3/neos": "~2.0"
 	},
 	"autoload": {
 		"psr-0": {
